replaced contact us page with ngdesk widget

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,13 @@
       href="https://fonts.googleapis.com/css?family=Nunito&display=swap"
       rel="stylesheet"
     />
+    <script>
+      var script = document.createElement("script");
+      script.type = "text/javascript";
+      script.src =
+        "https://testaccountmg623.ngdesk.com/widgets/chat/5e0abd2c6b7f2d0001918fbb/chat_widget.js";
+      document.getElementsByTagName("head")[0].appendChild(script);
+    </script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
